--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,6 @@
-$subcolor: #B6D094;
+// $subcolor: #B6D094;
 
-@import 'fonts';
+// @import 'fonts';
 
 
 @media screen 
@@ -11,6 +11,7 @@ $subcolor: #B6D094;
 
 .slide{
 	position: relative;
+	
 }
 
 body{
