--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 
 
-@media screen and (min-device-width: 750px) {
+@media screen and (min-width: 750px) and (max-width: 3600px) {
   .slide {
     position: relative; }
 
@@ -91,7 +91,7 @@
 
   #linkcolor {
     color: #9EBA89; } }
-@media only screen and (min-device-width: 300px) and (max-device-width: 736px) {
+@media only screen and (min-width: 300px) and (max-width: 736px) {
   body {
     margin-top: 20px;
     background-color: #211F20; }
