--- a/css/main.scss
+++ b/css/main.scss
@@ -4,8 +4,7 @@
 
 
 @media screen 
-  and (min-device-width: 750px) 
-  and (max-device-width: 1600px) 
+  and (min-width: 750px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (min-resolution: 192dpi) { 
 
@@ -149,7 +148,7 @@ span{
 
 @media only screen 
 and (min-device-width : 300px) 
-and (max-device-width : 736px) { 
+and (max-device-width : 749px) { 
 
 
 body{
