--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,8 @@
 
 
 @media screen 
-  and (min-width: 750px) 
+  and (min-width: 750px)
+  and (max-width: 4000px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (min-resolution: 192dpi) { 
 
