--- a/css/main.scss
+++ b/css/main.scss
@@ -4,8 +4,8 @@
 
 
 @media screen 
-  and (min-width: 750px)
-  and (max-width: 4000px) 
+  and (min-device-width: 750px)
+  and (max-device-width: 4000px) 
 {
 .slide{
 	position: relative;
@@ -147,7 +147,7 @@ span{
 
 @media only screen 
 and (min-device-width : 300px) 
-and (max-device-width : 749px) { 
+and (max-device-width : 750px) { 
 
 
 body{
