--- a/css/main.scss
+++ b/css/main.scss
@@ -4,8 +4,7 @@
 
 
 @media screen 
-  and (min-device-width: 750px)
-  and (max-device-width: 4000px) 
+  and (min-width: 750px)
 {
 .slide{
 	position: relative;
@@ -146,8 +145,7 @@ span{
 
 
 @media only screen 
-and (min-device-width : 300px) 
-and (max-device-width : 750px) { 
+and (max-width : 750px) { 
 
 
 body{
